--- a/puppet-builder/Dockerfile
+++ b/puppet-builder/Dockerfile
@@ -1,10 +1,7 @@
 FROM kreczko/centos6
 MAINTAINER Luke Kreczko
 
-RUN yum -y update && yum -y install rubygems \
-                                    ruby-devel \
-                                    gcc \
-                                    ruby193
-RUN echo "gem: --no-ri --no-rdoc" > ~/.gemrc && \
-    gem install puppet && \
-    gem install librarian-puppet -v 1.0.9
+RUN rpm --import https://yum.puppetlabs.com/RPM-GPG-KEY-puppetlabs
+RUN rpm -ivh http://yum.puppetlabs.com/puppetlabs-release-el-6.noarch.rpm
+RUN yum -y update
+RUN yum -y install puppet tar git
