updated CMSSW docker file

--- a/cmssw/Dockerfile
+++ b/cmssw/Dockerfile
@@ -2,10 +2,11 @@ FROM kreczko/puppet-builder
 MAINTAINER Luke Kreczko
 
 RUN yum update -y && yum install -y wget git sudo HEP_OSlibs_SL6 e2fsprogs
-ADD Puppetfile /
-ADD manifest.pp /
+    
+                                
+RUN ls /etc/puppet
+RUN cd /etc/puppet/modules && git clone https://github.com/ktf/puppet-cmsdist cmsdist
+RUN cd /etc/puppet/modules/cmsdist && git checkout ac5133e
 
-RUN useradd cmsbuild && install -o cmsbuild -d /opt/cmsbuild
-RUN librarian-puppet install
-
-RUN puppet apply -d --modulepath=/modules /manifest.pp
+ADD manifest.pp /manifest.pp
+RUN puppet apply -d --modulepath=/etc/puppet/modules /manifest.pp
