updated cmssw-standalone docker with suggestions from HN

--- a/cmssw-standalone/Dockerfile
+++ b/cmssw-standalone/Dockerfile
@@ -16,10 +16,28 @@ RUN mkdir -p /opt/cms && chown -R cms:cms /opt/cms
 # change to cms user
 USER cms
 RUN wget http://cmsrep.cern.ch/cmssw/cms/bootstrap.sh -O ${VO_CMS_SW_DIR}/bootstrap.sh
-RUN sh -x ${VO_CMS_SW_DIR}/bootstrap.sh setup -path ${VO_CMS_SW_DIR} -arch ${SCRAM_ARCH} &> $VO_CMS_SW_DIR/bootstrap_$SCRAM_ARCH.log
-RUN . $VO_CMS_SW_DIR/$SCRAM_ARCH/external/apt/*/etc/profile.d/init.sh;apt-get update
+RUN sh -x ${VO_CMS_SW_DIR}/bootstrap.sh setup -path ${VO_CMS_SW_DIR} -arch ${SCRAM_ARCH} &> ${VO_CMS_SW_DIR}/bootstrap_$SCRAM_ARCH.log
+
+# try again if download fails
+RUN echo "Acquire::Retries 99;" >> ${VO_CMS_SW_DIR}/${SCRAM_ARCH}/external/apt/0.5.16/etc/apt.conf
+
+# make the integration branches available
+RUN echo "rpm http://cmsrep.cern.ch cmssw/cms.week0/apt/${SCRAM_ARCH} lcg cms external" >> ${VO_CMS_SW_DIR}/${SCRAM_ARCH}/external/apt/0.5.16/etc/sources.list
+RUN echo "rpm http://cmsrep.cern.ch cmssw/cms.week1/apt/${SCRAM_ARCH} lcg cms external" >> ${VO_CMS_SW_DIR}/${SCRAM_ARCH}/external/apt/0.5.16/etc/sources.list
+
+# update the APT cache
+RUN . ${VO_CMS_SW_DIR}/${SCRAM_ARCH}/external/apt/*/etc/profile.d/init.sh;apt-get update
+
+# install dependencies for the CMSSW version of interest - first time run use this to create the list in the next step
 ADD install_dependencies.py ${VO_CMS_SW_DIR}/install_dependencies.py
 RUN python ${VO_CMS_SW_DIR}/install_dependencies.py
-RUN . $VO_CMS_SW_DIR/$SCRAM_ARCH/external/apt/*/etc/profile.d/init.sh; apt-get install -y cms+cmssw+CMSSW_${CMSSW_VERSION}
+
+# install CMSSW
+RUN . ${VO_CMS_SW_DIR}/${SCRAM_ARCH}/external/apt/*/etc/profile.d/init.sh; apt-get install -y cms+cmssw+CMSSW_${CMSSW_VERSION}
+
+# clean the APT cache
+RUN . ${VO_CMS_SW_DIR}/${SCRAM_ARCH}/external/apt/*/etc/profile.d/init.sh;apt-get clean all
+
+# change back to root user
 USER root
 RUN echo "source /opt/cms/cmsset_default.sh\n\n" > /etc/profile.d/scram.sh
