added maintainer email

--- a/phedex-test/Dockerfile
+++ b/phedex-test/Dockerfile
@@ -1,5 +1,7 @@
 FROM kreczko/phedex
 
+MAINTAINER Luke Kreczko <kreczko@cern.ch>
+
 USER phedex
 ADD run_tests.sh $sw/run_tests.sh
 CMD . /$sw/run_tests.sh
