Added NTupleProduction example

--- a/cmssw-standalone/Dockerfile
+++ b/cmssw-standalone/Dockerfile
@@ -42,3 +42,5 @@ RUN . ${VO_CMS_SW_DIR}/${SCRAM_ARCH}/external/apt/*/etc/profile.d/init.sh;apt-ge
 # change back to root user
 USER root
 RUN echo "source /opt/cms/cmsset_default.sh" > /etc/profile.d/scram.sh
+USER cms
+RUN cd /home/cms && source /opt/cms/cmsset_default.sh && scram project -n cmssw CMSSW_${CMSSW_VERSION}
