added miniconda for python testing

--- a/cmssw-standalone/Dockerfile
+++ b/cmssw-standalone/Dockerfile
@@ -41,6 +41,17 @@ RUN . ${VO_CMS_SW_DIR}/${SCRAM_ARCH}/external/apt/*/etc/profile.d/init.sh;apt-ge
 
 # change back to root user
 USER root
+RUN yum install -y bzip2
+RUN echo 'export PATH=/opt/conda/bin:$PATH' > /etc/profile.d/conda.sh && \
+    wget --quiet https://repo.continuum.io/miniconda/Miniconda-3.16.0-Linux-x86_64.sh && \
+    /bin/bash /Miniconda-3.16.0-Linux-x86_64.sh -b -p /opt/conda && \
+    rm Miniconda-3.16.0-Linux-x86_64.sh && \
+    /opt/conda/bin/conda install --yes conda==3.18.3
+RUN chown -R cms:cms /opt/conda 
+
 RUN echo "source /opt/cms/cmsset_default.sh" > /etc/profile.d/scram.sh
+
 USER cms
+RUN export PATH=/opt/conda/bin:$PATH && conda install -q --yes coverage
+RUN export PATH=/opt/conda/bin:$PATH && pip install nose2[coverage-plugin]
 RUN cd /home/cms && source /opt/cms/cmsset_default.sh && scram project -n cmssw CMSSW_${CMSSW_VERSION}
