another attempt for ROOT notebook

--- a/root-notebook/Dockerfile
+++ b/root-notebook/Dockerfile
@@ -1,20 +1,34 @@
 FROM jupyter/datascience-notebook
-
+# this will need to come from centos
 MAINTAINER Luke Kreczko <kreczko@cern.ch>
 USER root
-RUN wget https://root.cern.ch/download/root_v6.06.00.Linux-ubuntu14-x86_64-gcc4.8.tar.gz -O /opt/root.tar.gz
-RUN cd /opt; tar xzf root.tar.gz
-RUN cd /opt; tar xzf root.tar.gz
+RUN git clone https://github.com/root-mirror/root.git /opt/root
 ENV ROOTSYS /opt/root
-RUN echo 'source $ROOTSYS/bin/thisroot.sh' > /etc/profile.d/root-cern.sh
-RUN echo 'export LD_LIBRARY_PATH=$ROOTSYS/lib:$LD_LIBRARY_PATH' >> /etc/profile.d/root-cern.sh
+
+# from https://root.cern.ch/build-prerequisites#ubuntu
+RUN apt-get update && \
+	apt-get install -y git dpkg-dev make g++ gcc binutils libx11-dev libxpm-dev \
+	libxft-dev libxext-dev libx11-6
+
+RUN cd $ROOTSYS && \
+	git checkout v6-06-00 && \
+	/bin/bash -c 'source activate python2' && \
+	./configure  --with-x11-libdir=/usr/lib/x86_64-linux-gnu --with-xpm-libdir=/usr/lib/x86_64-linux-gnu \
+    --with-xft-libdir=/usr/lib/x86_64-linux-gnu --with-xext-libdir=/usr/lib/x86_64-linux-gnu \
+    --enable-roofit --enable-minuit2 --enable-builtin-freetype --enable-tmva && \
+	make jobs=4
+
+ADD activate_root.sh /etc/profile.d/activate_root.sh
 RUN cp -r $ROOTSYS/etc/notebook/kernels/root $CONDA_DIR/share/jupyter/kernels/ && \
     chmod -R go+rx $CONDA_DIR/share/jupyter
 # as per jupyter/datascience-notebook
 USER jovyan
-RUN pip install metakernel
+#RUN /bin/bash -c 'source /etc/profile.d/activate_root.sh' && \
+	#pip install metakernel
+
 # CMD ["source $ROOTSYS/bin/thisroot.sh;start-notebook.sh"]
 #TODO: 
 # - need to compile ROOT as this container comes with gcc 4.9
 # - need to make python2 a default for now
+USER root
 
